# flet-wizards

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
docs/auth/: login.md  recovery.md  register.md
docs/profile/: avatar.md  edit.md  setup.md
docs/reference/: wizard.py
pipeline/: cocoindex_pipeline.py
src/flet_wizards/: __init__.py
src/flet_wizards/auth/: __init__.py  login.py  recovery.py  register.py  two_factor.py
src/flet_wizards/core/: base_state.py  components.py  mock_data.py  registry.py  snack.py  theme.py
src/flet_wizards/onboarding/: __init__.py  walkthrough.py
src/flet_wizards/profile/: avatar.py  edit.py  setup.py
src/flet_wizards/survey/: __init__.py  feedback.py
src/gallery/: __init__.py  app.py  card.py  sidebar.py
src/wizards/: __init__.py
src/wizards/core/: __init__.py  base_state.py  base_wizard.py  components.py  mock_data.py  platform_guard.py  registry.py  theme.py
src/wizards/profile/: __init__.py  avatar.py  edit.py  setup.py
