[project]
name = "flet-wizards"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.85.0",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
pipeline = [
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "flet-cli>=0.85.0",
    "flet-desktop>=0.85.0",
    "flet-web>=0.85.0",
]

[tool.flet]
org = "com.mycompany"
product = "flet-wizards"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
