[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flet-wizards"
version = "0.1.0"
description = "Multi-step wizard templates for Flet apps — auth, profile, and gallery showcase"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Alison Santos", email = "aprovaxsistemaconcursos@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "flet>=0.85.0",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
pipeline = [
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Alisonsantos77/flet-wizards"
Repository = "https://github.com/Alisonsantos77/flet-wizards"
Issues = "https://github.com/Alisonsantos77/flet-wizards/issues"

[dependency-groups]
dev = [
    "flet-cli>=0.85.0",
    "flet-desktop>=0.85.0",
    "flet-web>=0.85.0",
]

# ─── Hatch build config ────────────────────────────────────────────────
# Apenas `flet_wizards` é distribuído. `gallery/`, `pipeline/`, `main.py`
# raiz e `src/main.py` ficam fora do pacote — são código de desenvolvimento
# (showcase, geração de docs, entrypoint do flet run) que não interessa
# a quem instala via pip.

[tool.hatch.build.targets.wheel]
packages = ["src/flet_wizards"]

[tool.hatch.build.targets.sdist]
include = [
    "src/flet_wizards",
    "README.md",
    "pyproject.toml",
]
exclude = [
    "src/gallery",
    "src/main.py",
    "src/assets",
    "pipeline",
    ".github",
    "docs",
    "storage",
    "tests",
    "main.py",
]

# ─── Flet app config ───────────────────────────────────────────────────
# Para `flet run` (gallery dev), continua apontando pra src/.
# Não interfere no build PyPI.

[tool.flet]
org = "com.alisonsantos"
product = "flet-wizards"
company = "Alison Santos"
copyright = "Copyright (C) 2026 by Alison Santos"

[tool.flet.app]
path = "src"
