[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flet-wizards"
version = "0.2.1"
description = "Multi-step wizard templates for Flet apps — auth, profile, and gallery showcase"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Alison Santos", email = "aprovaxsistemaconcursos@gmail.com" }
]
keywords = ["flet", "wizard", "ui", "components", "python", "mobile", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Widget Sets",
    "Typing :: Typed",
]
dependencies = [
    "flet>=0.85.0",
    "loguru>=0.7.3",
]

[project.urls]
Homepage = "https://github.com/Alisonsantos77/flet-wizards"
Repository = "https://github.com/Alisonsantos77/flet-wizards"
Issues = "https://github.com/Alisonsantos77/flet-wizards/issues"
Changelog = "https://github.com/Alisonsantos77/flet-wizards/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "flet-cli>=0.85.0",
    "flet-desktop>=0.85.0",
    "flet-web>=0.85.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/flet_wizards"]

[tool.hatch.build.targets.sdist]
include = [
    "src/flet_wizards",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    "src/gallery",
    "src/main.py",
    "src/assets",
    ".github",
    "docs",
    "storage",
    "tests",
    "main.py",
]

[tool.flet]
org = "com.alisonsantos"
product = "flet-wizards"
company = "Alison Santos"
copyright = "Copyright (C) 2026 by Alison Santos"

[tool.flet.app]
path = "src"
